update whatsnew, improve coverage

--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -12,26 +12,44 @@ compatibility notes.
 
 API Changes
 ~~~~~~~~~~~
-* Moved functions for cell temperature and constant `TEMP_MODEL_PARAMS` from `pvsystem.py` to `celltemp.py`. (:issue:`678')
-* Renamed `pvsystem.sapm_celltemp` and `pvsystem.pvsyst_celltemp` to
- `celltemp.sapm` and `celltemp.pvsyst`. (:issue:`678')
-* Argument order and output type of `pvsystem.sapm_celltemp`,  `pvsystem.pvsyst_celltemp` and `PVSystem.sapm_celltemp` have been altered to be consistent among cell temperature model functions.
-* Removed `model` as a kwarg from `celltemp.sapm` and `celltemp.pvsyst`. These
-functions now require model parameters as kwargs.
-* Implemented `pvsyst` as an option for `ModelChain.temp_model`. (:issue:`678')
+* Changes to functions and methods for cell temperature models:
+  (:issue:`678')
+    - Moved functions for cell temperature and constant 
+      `TEMP_MODEL_PARAMS` from `pvsystem.py` to `celltemp.py`.
+    - Renamed `pvsystem.sapm_celltemp` and `pvsystem.pvsyst_celltemp`
+      to `celltemp.sapm` and `celltemp.pvsyst`.
+    - Argument order and output type of `pvsystem.sapm_celltemp`,
+      `pvsystem.pvsyst_celltemp` and `PVSystem.sapm_celltemp` have
+      been altered to be consistent among cell temperature model
+      functions.
+    - Removed `model` as a kwarg from `celltemp.sapm` and
+      `celltemp.pvsyst`. These functions now require model-specific
+      parameters as kwargs.
+    - Added attribute `PVSystem.module_type` (str) to record module
+      front and back materials, default is `glass_polymer`.
+    - Added attribute `PVSystem.temperature_model_parameters` (dict)
+      to contain temperature model parameters.
+    - Changed meaning of `PVSystem.racking_model` to describe racking
+      only, e.g., default is `open_rack`.
+    - Implemented `pvsyst` as an option for `ModelChain.temp_model`.
+    - `ModelChain.temp_model` now defaults to `None. The temperature
+       model can be inferred from
+      `PVSystem.temperature_model_parameters`.
 
 Enhancements
 ~~~~~~~~~~~~
 
 Bug fixes
 ~~~~~~~~~
-* Fix handling of keyword arguments in `forecasts.get_processed_data`.
+* Fix handling of keyword arguments in forecasts.get_processed_data`.
   (:issue:`745`)
 
 Testing
 ~~~~~~~
-* Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
+* Added 30 minutes to timestamps in `test_psm3.csv` to match change
+  in NSRDB (:issue:`733`)
 * Added tests for methods in bifacial.py.
+* Added tests for changes to cell temperature models.
 
 Documentation
 ~~~~~~~~~~~~~
