fix rounding issue in linke turbidity lookup function (#755)
* Resolve merge conflicts.

The upstream what's new file had been updated.

* Copy whatsnew file from upstream.

* Remove unnecessary np.around().

Instead of rounding to one decimal place, then comparing to .5,
just compare to .55 right away which preserves the same behavior as
before. If you want to stay true to the comment on line 314, use
<= .5 in comparison instead as before, but still drop the np.around().

* Use <= .5 as comparisons in _linearly_scale.

* Correct previous commit, use <= .5.

* Update what's new file.

Closes #754

* Compare to 0.500001 for margin of error.

* Rename _linearly_scale -> _degrees_to_index, refactor.

This commit reduces inputs to just two, refactors some calculations, and mainly tries
to be much clearer with the documentation.

* Add test for clearsky._degrees_to_index().

Tests that an invalid value for the degree_type argument raises an error.

* Remove try/except/finally.

The exception that is being checked for here is already checked for in the
_degrees_to_index method, so there's no need to do the check again. So this
removes the except portion, and just keeps the try and finally parts.

* Update parameter type description.

* Fix linting errors.

* Fix typo.

* Give more detail in what's new description.

* Rename arg, use context manager, and add more tech. documentation.

* Add missing zero in documentation.

* Break up line so it's < 80 characters.

* Change arg type to float or int.

* Update argument name in test_degrees_to_index_1().

--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -20,6 +20,10 @@ Bug fixes
 * Fix handling of keyword arguments in `forecasts.get_processed_data`.
   (:issue:`745`)
 * Fix output as Series feature in :py:func:`pvlib.pvsystem.ashraeiam`.
+* Fix rounding issue in `clearsky._linearly_scale`, a function that converts
+  longitude or latitude degree to an index number in a Linke turbidity lookup
+  table. Also rename the function to `clearsky._degrees_to_index`.
+  (:issue:`754`)
 
 Testing
 ~~~~~~~
