rename from celltemp to temperature

--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -15,29 +15,31 @@ API Changes
 * Changes to functions and methods for cell temperature models:
   (:issue:`678')
     - Moved functions for cell temperature and constant 
-      `TEMP_MODEL_PARAMS` from `pvsystem.py` to `celltemp.py`.
+      `TEMP_MODEL_PARAMS` from `pvsystem.py` to `temperature.py`.
     - Renamed `pvsystem.sapm_celltemp` and `pvsystem.pvsyst_celltemp`
-      to `celltemp.sapm` and `celltemp.pvsyst`.
+      to `temperature.sapm_cell` and `temperature.pvsyst_cell`.
+    - Created `temperature.sapm_module`.
     - Argument order and output type of `pvsystem.sapm_celltemp`,
       `pvsystem.pvsyst_celltemp` and `PVSystem.sapm_celltemp` have
       been altered to be consistent among cell temperature model
       functions.
-    - Removed `model` as a kwarg from `celltemp.sapm` and
-      `celltemp.pvsyst`. These functions now require model-specific
+    - Removed `model` as a kwarg from `temperature.sapm_cell` and
+      `temperature.pvsyst_cell`. These functions now require model-specific
       parameters as kwargs.
+    - Renamed `pvsystem.TEMP_MODEL_PARAMS` to `temperature.TEMPERATURE_MODEL_PARAMETERS`.
+    - `temperature.TEMPERATURE_MODEL_PARAMETERS` uses dicts rather than tuple for parameter sets. dict keys for `temperature.TEMPERATURE_MODEL_PARAMETERS` have changed.
     - Added attribute `PVSystem.module_type` (str) to record module
       front and back materials, default is `glass_polymer`.
     - Added attribute `PVSystem.temperature_model_parameters` (dict)
       to contain temperature model parameters.
     - Changed meaning of `PVSystem.racking_model` to describe racking
       only, e.g., default is `open_rack`.
+    - In `PVSystem.sapm_celltemp` and `PVSystem.pvsyst_celltemp`, changed kwarg `model` to `parameter_set`. `parameter_set` expects a str which is a valid key for `temperature.TEMPERATURE_MODEL_PARAMETERS` for the corresponding temperature model.
     - Implemented `pvsyst` as an option for `ModelChain.temp_model`.
     - `ModelChain.temp_model` now defaults to `None. The temperature
        model can be inferred from
       `PVSystem.temperature_model_parameters`.
 
-Enhancements
-~~~~~~~~~~~~
 Enhancements
 ~~~~~~~~~~~~
 * Created two new incidence angle modifier functions: :py:func:`pvlib.pvsystem.iam_martin_ruiz`
