--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -27,7 +27,8 @@ API Changes
       `temperature.pvsyst_cell`. These functions now require model-specific
       parameters as kwargs.
     - Renamed `pvsystem.TEMP_MODEL_PARAMS` to `temperature.TEMPERATURE_MODEL_PARAMETERS`.
-    - `temperature.TEMPERATURE_MODEL_PARAMETERS` uses dicts rather than tuple for parameter sets. dict keys for `temperature.TEMPERATURE_MODEL_PARAMETERS` have changed.
+    - `temperature.TEMPERATURE_MODEL_PARAMETERS` uses dict rather than tuple for a parameter set. dict keys for `temperature.TEMPERATURE_MODEL_PARAMETERS` have changed.
+    - Parameter sets for the SAPM cell temperature model named 'open_rack_polymer_thinfilm_steel' and '22x_concentrator_tracker' are considered obsolete and have been removed.
     - Added attribute `PVSystem.module_type` (str) to record module
       front and back materials, default is `glass_polymer`.
     - Added attribute `PVSystem.temperature_model_parameters` (dict)
@@ -36,9 +37,10 @@ API Changes
       only, e.g., default is `open_rack`.
     - In `PVSystem.sapm_celltemp` and `PVSystem.pvsyst_celltemp`, changed kwarg `model` to `parameter_set`. `parameter_set` expects a str which is a valid key for `temperature.TEMPERATURE_MODEL_PARAMETERS` for the corresponding temperature model.
     - Implemented `pvsyst` as an option for `ModelChain.temp_model`.
-    - `ModelChain.temp_model` now defaults to `None. The temperature
+    - `ModelChain.temp_model` now defaults to `None`. The temperature
        model can be inferred from
       `PVSystem.temperature_model_parameters`.
+    - `modelchain.basic_chain` has a new required argument `temperature_model_parameters`. 
 
 Enhancements
 ~~~~~~~~~~~~
@@ -47,7 +49,7 @@ Enhancements
 
 Bug fixes
 ~~~~~~~~~
-* Fix handling of keyword arguments in forecasts.get_processed_data`.
+* Fix handling of keyword arguments in `forecasts.get_processed_data`.
   (:issue:`745`)
 * Fix output as Series feature in :py:func:`pvlib.pvsystem.ashraeiam`.
 * Fix rounding issue in `clearsky._linearly_scale`, a function that converts
