--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -10,6 +10,7 @@ compatibility notes.
 **Python 2.7 support ended on June 1, 2019.** (:issue:`501`)
 **Minimum numpy version is now 1.10.4. Minimum pandas version is now 0.18.1.**
 
+
 Enhancements
 ~~~~~~~~~~~~
 * Created two new incidence angle modifier functions: :py:func:`pvlib.pvsystem.iam_martin_ruiz`
@@ -30,6 +31,16 @@ Testing
 * Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
 * Added tests for methods in bifacial.py.
 
+Removal of prior version deprecations
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+* Removed `irradiance.extraradiation`.
+* Removed `irradiance.grounddiffuse`.
+* Removed `irradiance.total_irrad`.
+* Removed `irradiance.globalinplane`.
+* Removed `atmosphere.relativeairmass`.
+* Removed `atmosphere.relativeairmass`.
+* Removed `solarposition.get_sun_rise_set_transit`.
+* Removed `tmy` module.
 
 Contributors
 ~~~~~~~~~~~~
