--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -37,6 +37,16 @@ Testing
 * Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
 * Added tests for methods in bifacial.py.
 
+Removal of prior version deprecations
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+* Removed `irradiance.extraradiation`.
+* Removed `irradiance.grounddiffuse`.
+* Removed `irradiance.total_irrad`.
+* Removed `irradiance.globalinplane`.
+* Removed `atmosphere.relativeairmass`.
+* Removed `atmosphere.relativeairmass`.
+* Removed `solarposition.get_sun_rise_set_transit`.
+* Removed `tmy` module.
 
 Contributors
 ~~~~~~~~~~~~
