--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -21,7 +21,7 @@ API Changes
          old `pvsystem.sapm_celltemp` returned a `DataFrame` with both cell and module temperatures.
       - Created `temperature.sapm_module` to return module temperature using the SAPM temperature model.
       - Changed the order of arguments for`pvsystem.sapm_celltemp`,
-        `pvsystem.pvsyst_celltemp` and `PVSystem.sapm_celltemp` to be consistent 
+        `pvsystem.pvsyst_celltemp` and `PVSystem.sapm_celltemp` to be consistent
         among cell temperature model functions.
       - Removed `model` as a kwarg from `temperature.sapm_cell` and
         `temperature.pvsyst_cell`. These functions now require model-specific parameters.
@@ -35,7 +35,7 @@ API Changes
         'open_rack_polymer_thinfilm_steel' and '22x_concentrator_tracker'
         are considered obsolete and have been removed.
    * Changes to `PVSystem` class
-      - Changed the `model` kwarg in `PVSystem.sapm_celltemp` and 
+      - Changed the `model` kwarg in `PVSystem.sapm_celltemp` and
         `PVSystem.pvsyst_celltemp` to `parameter_set`. `parameter_set` expects
         a str which is a valid key for `temperature.TEMPERATURE_MODEL_PARAMETERS`
         for the corresponding temperature model.
@@ -114,6 +114,7 @@ Removal of prior version deprecations
 * Removed `atmosphere.relativeairmass`.
 * Removed `solarposition.get_sun_rise_set_transit`.
 * Removed `tmy` module.
+* Removed `ModelChain.singlediode` method.
 
 Contributors
 ~~~~~~~~~~~~
