add timeout to get_psm3 (#741)
* add timeout

* update whatsnew

--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -132,6 +132,11 @@ Removal of prior version deprecations
 * Removed `ModelChain.prepare_inputs` clearsky assumption when no irradiance
   data was provided.
 
+Enhancements
+~~~~~~~~~~~~
+* Add `timeout` to :py:func:`pvlib.iotools.get_psm3`.
+
+
 Contributors
 ~~~~~~~~~~~~
 * Mark Campanellli (:ghuser:`markcampanelli`)
