--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -113,7 +113,8 @@ Testing
   in NSRDB (:issue:`733`)
 * Added tests for methods in bifacial.py.
 * Added tests for changes to cell temperature models.
-* Add tests for bare environment. (:issue:`727`)
+* Add tests configuration for bare python environment (no conda).
+  (:issue:`727`)
 
 Documentation
 ~~~~~~~~~~~~~
