- includes all feedbacks made on the 21/10, except moving of pv_fct() to the module level

--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -96,8 +96,8 @@ Enhancements
   the single diode equation to an IV curve.
 * Add :py:func:`~pvlib.ivtools.fit_sdm_cec_sam`, a wrapper for the CEC single
   diode model fitting function '6parsolve' from NREL's System Advisor Model.
-* Add :py:func:`~pvlib.ivtools.fit_sdm_desoto`, a method to fit the single
-  diode equation to the typical specifications given in manufacturers datasheets.
+* Add :py:func:`~pvlib.ivtools.fit_sdm_desoto`, a method to fit the De Soto single
+  diode model to the typical specifications given in manufacturers datasheets.
 
 Bug fixes
 ~~~~~~~~~
